<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        style="@style/ContainerStyle"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/logo_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08"
            app:layout_constraintWidth_percent="0.15" />

        <ImageView
            android:id="@+id/theme_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/night_ic"
            app:layout_constraintBottom_toBottomOf="@+id/logo_image_view"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toTopOf="@+id/logo_image_view"
            app:layout_constraintWidth_percent="0.08" />

        <ImageView
            android:id="@+id/language_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/language"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04"
            app:layout_constraintWidth_percent="0.08" />


        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/auto_copy_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/auto_copy_disabled"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="5:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auto_copy_switch"
            app:layout_constraintVertical_bias="0.02"
            app:layout_constraintWidth_percent="0.6" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/notification_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify_after_copying"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/materialSwitch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_paste_otp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/notification_switch"
            app:layout_constraintTop_toBottomOf="@+id/notification_switch" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exception_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/exception_list"
            app:icon="@drawable/forbidden_ic"
            app:iconGravity="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/materialSwitch2"
            app:layout_constraintVertical_bias="0.02"
            app:layout_constraintWidth_percent="0.5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rate_app_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rate_app"
            app:icon="@drawable/star_ic"
            app:iconGravity="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/exception_button"
            app:layout_constraintVertical_bias="0.02"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/your_messages_stay_private_all_processing_happens_locally_on_your_device"
            app:drawableStartCompat="@drawable/lock_ic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95"
            app:layout_constraintWidth_percent="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        app:tint="@null"
        android:id="@+id/theme_switch_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.constraintlayout.widget.ConstraintLayout>